--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,4 +1,4 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 Copyright 2017 huanlu.
 
@@ -57,7 +57,6 @@ limitations under the License.
 
             <div class="inner-bg">
                 <div class="container">
-                    <h:messages />
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
                             <h1>
@@ -86,28 +85,42 @@ limitations under the License.
                                         <h:messages/>
                                         <div class="form-group">
                                             <p:inputText
-                                                value="#{userManager.newStuff.username}" placeholder="Username..."
-                                                styleClass="form-username form-control" id="form-username"/>
+                                                value="#{credentials.username}" placeholder="Username..."
+                                                styleClass="form-username form-control" id="form-username" validatorMessage=""/>
                                         </div>
                                         <div class="form-group">
                                             <p:inputText
-                                                value="#{userManager.newStuff.password}" placeholder="Password..."
-                                                styleClass="form-password form-control" id="signin-form-password" type="password"/>
-                                        </div>
-                                        <div class="form-group">
-                                            <p:inputText
-                                                value="#{userManager.newStuff.email}" placeholder="Email..."
-                                                styleClass="form-password form-control" id="form-password"/>
+                                                value="#{credentials.password}" placeholder="Password..."
+                                                styleClass="form-password form-control" id="form-password" type="password"/>
                                         </div>
                                     </h:panelGrid>
-                                    <h:commandButton id="login" value="Sign in"
-                                                     action="#{userManager.addStuff}"
+                                    <h:commandButton id="login" value="Login"
+                                                     action="#{login.login}" rendered="#{!login.loggedIn}" 
+                                                     styleClass="button"/>
+                                    <h:commandButton id="logout" value="Logout"
+                                                     action="#{login.logout}" rendered="#{login.loggedIn}" 
                                                      styleClass="button"/>
                                 </h:form>
+                                <p:link styleClass="btn btn-link-1" href="/users.jsf">
+                                    Sign in!
+                                </p:link>
                             </div>
                         </div>
                     </div>
-                    
+                    <div class="row">
+                        <div class="col-sm-6 col-sm-offset-3 social-login">
+                            <h3>...or login with:</h3>
+                            <div class="social-login-buttons">
+                                <h:link styleClass="btn btn-link-1 btn-link-1-facebook" > <i
+                                        class="fa fa-facebook"></i> Facebook
+                                </h:link> <a class="btn btn-link-1 btn-link-1-twitter" href="#"> <i
+                                        class="fa fa-twitter"></i> Twitter
+                                </a> <a class="btn btn-link-1 btn-link-1-google-plus" href="#"> <i
+                                        class="fa fa-google-plus"></i> Google Plus
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
