--- a/src/main/webapp/userdelect.xhtml
+++ b/src/main/webapp/userdelect.xhtml
@@ -58,6 +58,12 @@ limitations under the License.
             <div class="inner-bg">
                 <div class="container">
                     <h:messages />
+                    <p:dataTable var="u" value="#{stuffs}" rows="5">
+                        <f:facet name="header">Users List</f:facet>
+                        <p:column headerText="UserName">#{u.username}</p:column>
+                        <p:column headerText="Passowrd">#{u.password}</p:column>
+                        <p:column headerText="Email">#{u.email}</p:column>
+                    </p:dataTable>
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
                             <h1>
@@ -72,8 +78,8 @@ limitations under the License.
                         <div class="col-sm-6 col-sm-offset-3 form-box">
                             <div class="form-top">
                                 <div class="form-top-left">
-                                    <h3>Login to our site</h3>
-                                    <p>Enter your username and password to log on:</p>
+                                    <h3>Drop Users</h3>
+                                    <p>Attention: unable to recover after deletion</p>
                                 </div>
                                 <div class="form-top-right">
                                     <i class="fa fa-key"></i>
@@ -86,28 +92,19 @@ limitations under the License.
                                         <h:messages/>
                                         <div class="form-group">
                                             <p:inputText
-                                                value="#{userManager.newStuff.username}" placeholder="Username..."
+                                                value="#{credentials.name}" placeholder="Username..."
                                                 styleClass="form-username form-control" id="form-username"/>
                                         </div>
-                                        <div class="form-group">
-                                            <p:inputText
-                                                value="#{userManager.newStuff.password}" placeholder="Password..."
-                                                styleClass="form-password form-control" id="signin-form-password" type="password"/>
-                                        </div>
-                                        <div class="form-group">
-                                            <p:inputText
-                                                value="#{userManager.newStuff.email}" placeholder="Email..."
-                                                styleClass="form-password form-control" id="form-password"/>
-                                        </div>
+                                       
                                     </h:panelGrid>
                                     <h:commandButton id="login" value="Sign in"
-                                                     action="#{userManager.addStuff}"
+                                                     action="#{userManager.removeStuff}"
                                                      styleClass="button"/>
                                 </h:form>
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
 
@@ -125,4 +122,5 @@ limitations under the License.
 
     </h:body>
 </html>
+
 
