--- a/src/main/webapp/Item_query.xhtml
+++ b/src/main/webapp/Item_query.xhtml
@@ -17,11 +17,11 @@ limitations under the License.
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
 	<title>PrimeFaces and Boostrap test</title>
 	<!-- CSS -->
@@ -49,14 +49,19 @@ limitations under the License.
 		<div class="inner-bg">
 			<div class="container">
 				<h:messages />
-				<p:dataTable var="i" value="#{itemManager.allItem}" rows="5">
+				<p:dataTable id="dataTable" var="i" value="#{itemManager.allItem}" rows="5">
 					<f:facet name="header">Item List</f:facet>
 					<p:column headerText="ItemName">#{i.name}</p:column>
 					<p:column headerText="Status">#{i.status}</p:column>
+					<p:column headerText="DateBought">#{i.dateBought}</p:column>
 					<p:column headerText="Code">#{i.code}</p:column>
 					<p:column headerText="NumTotal">#{i.numTotal}</p:column>
 					<p:column headerText="Category">#{i.category}</p:column>>
                                 </p:dataTable>
+				<p:blockUI block="dataTable" trigger="dataTable">
+                                        LOADING...<br />
+				        <p:graphicImage value="/images/ajax-loader.gif" />
+				</p:blockUI>
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text">
 						<h1>
@@ -69,7 +74,7 @@ limitations under the License.
 				</div>
 				<div class="row">
 					<p:menubar>
-						
+
 					</p:menubar>
 					<p:dataTable>
 
@@ -78,22 +83,22 @@ limitations under the License.
 				<div class="row">
 					<h:form>
 						<p>名称</p>
-						<h:selectOneMenu title="item" id="item"
-                                                        value="#{itemManager.currentItem.name}">
-                                                        <f:selectItem itemLabel="--选择物品--" />
-                                                        <f:selectItems value="#{itemManager.allItem}"
-                                                                var="Item" itemValue="#{Item}"
-                                                                itemLabel="#{Item.name}" />
-                                                </h:selectOneMenu>
+						<h:selectOneMenu title="item" id="item_edit"
+							value="#{itemManager.itemname}">
+							<f:selectItem itemLabel="--选择物品--" />
+							<f:selectItems value="#{itemManager.allItemName}" var="Itemname"
+								itemValue="#{Itemname}" itemLabel="#{Itemname}" />
+						</h:selectOneMenu>
 						<br />
-						<h:inputText value="#{itemManager.currentItem.status}" />
+						<h:inputText value="#{itemManager.code}" />
 						<br />
-						<h:inputText value="#{itemManager.currentItem.numTotal}" />
+						<h:inputText value="#{itemManager.numTotal}" />
 						<br />
-						<h:inputText value="#{itemManager.currentItem.code}" />
+						<h:inputText value="#{itemManager.dateBought}" />
 						<br />
-						
-						<h:commandButton action="#{itemManager.editItem}" value="Edit Item"/>
+						<h:commandButton action="#{itemManager.editItem}" id="submit_edit"
+							value="Edit Item" />
+						<p:blockUI block="item_edit" trigger="submit_edit" />
 					</h:form>
 				</div>
 			</div>
