--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -86,12 +86,16 @@ limitations under the License.
                                         <div class="form-group">
                                             <p:inputText
                                                 value="#{credentials.username}" placeholder="Username..."
-                                                styleClass="form-username form-control" id="form-username" validatorMessage=""/>
+                                                styleClass="form-username form-control" id="form-username" validatorMessage="">
+                                                <f:ajax event="blur" render="nameError"/>
+                                            </p:inputText>
+                                            <h:message id="nameError" for="form-username"/>
                                         </div>
                                         <div class="form-group">
                                             <p:inputText
                                                 value="#{credentials.password}" placeholder="Password..."
-                                                styleClass="form-password form-control" id="form-password" type="password"/>
+                                                styleClass="form-password form-control" id="form-password" type="password"
+                                                validator="#{credentials.validatePassword}"/>
                                         </div>
                                     </h:panelGrid>
                                     <h:commandButton id="login" value="Login"
