--- a/src/main/webapp/users.xhtml
+++ b/src/main/webapp/users.xhtml
@@ -49,6 +49,17 @@ limitations under the License.
               href="assets/ico/apple-touch-icon-72-precomposed.png" />
         <link rel="apple-touch-icon-precomposed"
               href="assets/ico/apple-touch-icon-57-precomposed.png" />
+        <script>
+            function showProgress(data){
+                var inputId = data.source.id;
+                var progressbarId = inputId.substring(0, inputId.length - "name".length) + "pole";
+                
+                if(data.status == "begin")
+                    Element.show(progressbarId);
+                else if(data.status == "success")
+                    Element.hide(progressbarId);
+            }
+        </script>
     </h:head>
     <h:body>
 
@@ -57,7 +68,6 @@ limitations under the License.
 
             <div class="inner-bg">
                 <div class="container">
-                    <h:messages />
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
                             <h1>
@@ -83,11 +93,14 @@ limitations under the License.
                                 <h:form role="form" class="login-form"
                                         id="loginForm">
                                     <h:panelGrid columns="1" rendered="#{!login.loggedIn}">
-                                        <h:messages/>
+                                        <h:messages style="color: #edab1f"/>
                                         <div class="form-group">
                                             <p:inputText
                                                 value="#{userManager.newStuff.username}" placeholder="Username..."
-                                                styleClass="form-username form-control" id="form-username"/>
+                                                styleClass="form-username form-control" id="form-username"
+                                                validator="#{userManager.validateName}">
+                                                <f:ajax event="blur" rendered="nameValidateError" onevent="showProgress"/>
+                                            </p:inputText>
                                         </div>
                                         <div class="form-group">
                                             <p:inputText
