--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -94,8 +94,7 @@ limitations under the License.
                                         <div class="form-group">
                                             <p:inputText
                                                 value="#{credentials.password}" placeholder="Password..."
-                                                styleClass="form-password form-control" id="form-password" type="password"
-                                                validator="#{credentials.validatePassword}"/>
+                                                styleClass="form-password form-control" id="form-password" type="password"/>
                                         </div>
                                     </h:panelGrid>
                                     <h:commandButton id="login" value="Login"
