--- a/src/main/webapp/users.xhtml
+++ b/src/main/webapp/users.xhtml
@@ -93,19 +93,24 @@ limitations under the License.
                                 <h:form role="form" class="login-form"
                                         id="loginForm">
                                     <h:panelGrid columns="1" rendered="#{!login.loggedIn}">
-                                        <h:messages style="color: #edab1f"/>
+                                        <h:messages id="username" style="color: #edab1f"/>
                                         <div class="form-group">
                                             <p:inputText
                                                 value="#{userManager.newStuff.username}" placeholder="Username..."
                                                 styleClass="form-username form-control" id="form-username"
-                                                validator="#{userManager.validateName}">
-                                                <f:ajax event="blur" rendered="nameValidateError" onevent="showProgress"/>
+                                                validator="#{userManager.validateName}" rendered="true" 
+                                                requiredMessage="您还没有输入您的姓名！">
+                                                <f:ajax event="blur" render="username"/>
                                             </p:inputText>
                                         </div>
                                         <div class="form-group">
+                                            <h:messages id="userpassword"/>
                                             <p:inputText
                                                 value="#{userManager.newStuff.password}" placeholder="Password..."
-                                                styleClass="form-password form-control" id="signin-form-password" type="password"/>
+                                                styleClass="form-password form-control" id="signin-form-password" 
+                                                type="password" required="true" requiredMessage="请输入您的密码">
+                                                <f:ajax event="blur" render="userpassword"/>
+                                            </p:inputText>
                                         </div>
                                         <div class="form-group">
                                             <p:inputText
