--- a/src/main/webapp/Item.xhtml
+++ b/src/main/webapp/Item.xhtml
@@ -4,102 +4,101 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:fn="http://java.sun.com/jsp/jstl/functions">
     <meta charset="utf-8"/>
-    <h:head>
-        <title>物品管理</title>
-        <link href="assets/css/table-style.css" rel="stylesheet"
-              type="css/text" />
-        <link href="assets/css/form-elements.css" rel="stylesheet"
-              type="css/text" />
-        <link href="assets/css/style.css" rel="stylesheet" type="css/text" />
-
-    </h:head>
-    <ui:composition template="template/template.xhtml">
-        <ui:define name="content">
-            <h:messages />
-            <h1>Items</h1>
-            <h:dataTable value="#{itemManager.allItem}" var="i"
-                         headerClass="header" cellspacing="5" cellpadding="10"
-                         columnClasses="column" styleClass="table">
-                <h:column>
-                    <f:facet name="header">
-                        物品名称
-                    </f:facet>
-                    <h:outputText value="#{i.name}" />
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        上级目录
-                    </f:facet>
-                    <h:outputText value="#{i.category.name}" />
-                </h:column>
-            </h:dataTable>
-            <h:dataTable value="#{categoryManager.allCategory}" var="c"
-                         headerClass="header" styleClass="table">
-                <h:column>
-                    <f:facet name="header">
-                        分类ID
-                    </f:facet>
-                    <h:outputText value="#{c.id}" />
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        分类名称
-                    </f:facet>
-                    <h:outputText value="#{c.name}" />
-                </h:column>
-            </h:dataTable>
-            <h1>Add Item</h1>
-            <h:form>
-                <table>
-                    <tr>
-                        <td>物品名称</td>
-                        <td><h:inputText value="#{itemaddmanager.newItem.name}" id="itemname" required="true" requiredMessage="您还没有给您的物品定名字呢！">
-                                <f:converter converterId="itemAddConverterBean" for="itemname"/>
-                                <f:validator validatorId="itemAddValidator" for="itemname"/>
-                            </h:inputText>
-                            <h:message for="itemname"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>上级目录</td>
-                        <td><h:selectOneMenu id="category_fk" value="#{itemaddmanager.newItem.category.id}" 
-                                             converter="#{categoryConverterBean}" title="category" required="true"
-                                             requiredMessage="请选择上级分类" >
-                                <f:selectItem itemLabel="--选择分类--" />
-                                <f:selectItems value="#{categoryManager.allCategory}" var="Category" itemValue="#{Category.id}" itemLabel="#{Category.name}"/>
-                            </h:selectOneMenu>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>物品状态</td>
-                        <td><h:inputText value="#{itemaddmanager.newItem.status}" required="true" requiredMessage=""/></td>
-                    </tr>
-                    <tr>
-                        <td>物品总量</td>
-                        <td><h:inputText value="#{itemaddmanager.newItem.numTotal}" required="true" requiredMessage="您还没有说有多少个啊！"/></td>
-                    </tr>
-                    <tr>
-                        <td>物品简介</td>
-                        <td><h:inputText value="#{itemaddmanager.newItem.code}" required="true" requiredMessage="简单介绍一下物品来源吧！"/></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><h:commandButton action="#{itemaddmanager.addItem}"
-                                             value="Add Item" /></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </table>
-            </h:form>
-            <h:form>
-                <h:inputText value="#{categoryManager.newcategory.name}" />
-                <h:commandButton action="#{categoryManager.addCategory}"
-                                 value="Add Category" />
-            </h:form>
-        </ui:define>
-    </ui:composition>
+    <f:view>
+        <f:event type="preRenderView" listener="#{login.checkLogin}"/>
+        <h:head>
+            <title>物品管理</title>
+            <link href="assets/css/table-style.css" rel="stylesheet"
+                  type="css/text" />
+            <link href="assets/css/form-elements.css" rel="stylesheet"
+                  type="css/text" />
+            <link href="assets/css/style.css" rel="stylesheet" type="css/text" />
+        </h:head>
+        <ui:composition template="template/template.xhtml">
+            <ui:define name="content">
+                <h:messages />
+                <h1>Items</h1>
+                <p:dataTable id="dataTable" value="#{itemManager.allItem}" var="i" rows="5" paginator="true">
+                    <p:column headerText="ItemName">#{i.name}</p:column>
+                    <p:column headerText="Status">#{i.status}</p:column>
+                    <p:column headerText="DateBought">#{i.dateBought}</p:column>
+                    <p:column headerText="Code">#{i.code}</p:column>
+                    <p:column headerText="NumTotal">#{i.numTotal}</p:column>
+                    <p:column headerText="Category">#{i.category.name}</p:column>
+                </p:dataTable>
+                <p:blockUI block="dataTable" trigger="dataTable">
+                    LOADING...<br />
+                    <p:graphicImage value="/assets/img/loading/loading.gif" />
+                </p:blockUI>
+                <h:dataTable value="#{categoryManager.allCategory}" var="c"
+                             headerClass="header" styleClass="table">
+                    <h:column>
+                        <f:facet name="header">
+                            分类ID
+                        </f:facet>
+                        <h:outputText value="#{c.id}" />
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            分类名称
+                        </f:facet>
+                        <h:outputText value="#{c.name}" />
+                    </h:column>
+                </h:dataTable>
+                <h1>Add Item</h1>
+                <h:form>
+                    <table>
+                        <tr>
+                            <td>物品名称</td>
+                            <td><h:inputText value="#{itemaddmanager.newItem.name}" id="itemname" 
+                                             required="true" requiredMessage="您还没有给您的物品定名字呢！"
+                                             validator="#{itemaddmanager.ItemAddValidator}">
+                                </h:inputText>
+                                <h:message for="itemname"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>上级目录</td>
+                            <td><h:selectOneMenu id="category_fk" value="#{itemaddmanager.newItem.category.id}" 
+                                                 converter="#{categoryConverterBean}" title="category" required="true"
+                                                 requiredMessage="请选择上级分类" >
+                                    <f:selectItem itemLabel="--选择分类--" />
+                                    <f:selectItems value="#{categoryManager.allCategory}" var="Category" itemValue="#{Category.id}" itemLabel="#{Category.name}"/>
+                                </h:selectOneMenu>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>物品状态</td>
+                            <td><h:inputText value="#{itemaddmanager.newItem.status}" required="true" requiredMessage=""/></td>
+                        </tr>
+                        <tr>
+                            <td>物品总量</td>
+                            <td><h:inputText value="#{itemaddmanager.newItem.numTotal}" required="true" requiredMessage="您还没有说有多少个啊！"/></td>
+                        </tr>
+                        <tr>
+                            <td>物品简介</td>
+                            <td><h:inputText value="#{itemaddmanager.newItem.code}" required="true" requiredMessage="简单介绍一下物品来源吧！"/></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><h:commandButton action="#{itemaddmanager.addItem}"
+                                                 value="Add Item" /></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </h:form>
+                <h:form>
+                    <h:inputText value="#{categoryManager.newcategory.name}" />
+                    <h:commandButton action="#{categoryManager.addCategory}"
+                                     value="Add Category" />
+                </h:form>
+            </ui:define>
+        </ui:composition>
+    </f:view>
 </html>
