--- a/src/main/webapp/Item_modify.xhtml
+++ b/src/main/webapp/Item_modify.xhtml
@@ -21,7 +21,8 @@ limitations under the License.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:fn="http://java.sun.com/jsp/jstl/functions">
     <h:head>
         <title>PrimeFaces and Boostrap test</title>
         <!-- CSS -->
@@ -49,7 +50,7 @@ limitations under the License.
             <div class="inner-bg">
                 <div class="container">
                     <h:messages />
-                    <p:dataTable id="dataTable" var="i" value="#{itemManager.allItem}" rows="5">
+                    <p:dataTable id="dataTable" var="i" value="#{itemManager.allItem}" rows="5" paginator="true">
                         <f:facet name="header">Item List</f:facet>
                         <p:column headerText="ItemName">#{i.name}</p:column>
                         <p:column headerText="Status">#{i.status}</p:column>
@@ -57,29 +58,14 @@ limitations under the License.
                         <p:column headerText="Code">#{i.code}</p:column>
                         <p:column headerText="NumTotal">#{i.numTotal}</p:column>
                         <p:column headerText="Category">#{i.category.name}</p:column>
+                        <f:facet name="footer">
+                            In total there are #{fn:length(userManager.stuffs)} Stuffs.
+                        </f:facet>
                     </p:dataTable>
                     <p:blockUI block="dataTable" trigger="dataTable">
                         LOADING...<br />
-                        <p:graphicImage value="/images/ajax-loader.gif" />
+                        <p:graphicImage value="/assets/img/loading/loading.gif" />
                     </p:blockUI>
-                    <div class="row">
-                        <div class="col-sm-8 col-sm-offset-2 text">
-                            <h1>
-                                <strong>314Lab</strong> Management
-                            </h1>
-                            <div class="description">
-                                <p>Power of All of 314!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <p:menubar>
-
-                        </p:menubar>
-                        <p:dataTable>
-
-                        </p:dataTable>
-                    </div>
                     <div class="row">
                         <h:form>
                             <p>名称</p>
