--- a/src/main/webapp/Stuff_modify.xhtml
+++ b/src/main/webapp/Stuff_modify.xhtml
@@ -17,89 +17,96 @@ limitations under the License.
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">
-<h:head>
-	<title>PrimeFaces and Boostrap test</title>
-	<!-- CSS -->
-	<link rel="stylesheet"
-		href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500" />
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-	<link rel="stylesheet"
-		href="assets/font-awesome/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="assets/css/form-elements.css" />
-	<link rel="stylesheet" href="assets/css/style.css" />
-	<script src="assets/" />
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:fn="http://java.sun.com/jsp/jstl/functions">
+    <h:head>
+        <title>PrimeFaces and Boostrap test</title>
+        <!-- CSS -->
+        <link rel="stylesheet"
+              href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500" />
+        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet"
+              href="assets/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="assets/css/form-elements.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
+        <script src="assets/" />
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-</h:head>
-<h:body>
+    </h:head>
+    <h:body>
 
-	<!-- Top content -->
-	<div class="top-content">
+        <!-- Top content -->
+        <div class="top-content">
 
-		<div class="inner-bg">
-			<div class="container">
-				<h:messages />
-				<p:dataTable var="u" value="#{stuffs}" rows="5">
-					<f:facet name="header">Users List</f:facet>
-					<p:column headerText="UserName">#{u.username}</p:column>
-					<p:column headerText="Passowrd">#{u.password}</p:column>
-					<p:column headerText="Email">#{u.email}</p:column>
-				</p:dataTable>
-				<div class="row">
-					<div class="col-sm-8 col-sm-offset-2 text">
-						<h1>
-							<strong>314Lab</strong> Management
-						</h1>
-						<div class="description">
-							<p>Power of All of 314!</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="row">
-					<h:form>
-						<p>名称</p>
-						<h:selectOneMenu title="stuff_edit" id="stuff_edit"
-							value="#{userManager.currentstuffname}">
-							<f:selectItem itemLabel="--选择物品--" />
-							<f:selectItems value="#{userManager.allStuffName}" var="StuffName"
-								itemValue="#{StuffName}" itemLabel="#{StuffName}" />
-						</h:selectOneMenu>
-						<br />
-						<h:inputText value="#{userManager.password}" /><br/>
-						<h:inputText value="#{userManager.email}" />
-						<br />
-						<h:commandButton action="#{userManager.editStuff}" id="submit_edit"
-							value="Edit Stuff" />
-					</h:form>
-					<p:blockUI block="stuff_edit" trigger="submit_edit" />
-				</div>
-			</div>
-		</div>
+            <div class="inner-bg">
+                <div class="container">
+                    <h:messages />
+                    <p:dataTable var="u" value="#{stuffs}" rows="5" paginator="true">
+                        <f:facet name="header">Users List</f:facet>
+                        <p:column headerText="UserName">#{u.username}</p:column>
+                        <p:column headerText="Passowrd">#{u.password}</p:column>
+                        <p:column headerText="Email">#{u.email}</p:column>
+                        <f:facet name="footer">
+                            In total there are #{fn:length(userManager.stuffs)} Stuffs.
+                        </f:facet>
+                    </p:dataTable>
+                    <p:blockUI block="dataTable" trigger="dataTable">
+                        LOADING...<br />
+                        <p:graphicImage value="/assets/img/loading/loading.gif" />
+                    </p:blockUI>
+                    <div class="row">
+                        <div class="col-sm-8 col-sm-offset-2 text">
+                            <h1>
+                                <strong>314Lab</strong> Management
+                            </h1>
+                            <div class="description">
+                                <p>Power of All of 314!</p>
+                            </div>
+                        </div>
+                    </div>
 
-	</div>
+                    <div class="row">
+                        <h:form>
+                            <p>名称</p>
+                            <h:selectOneMenu title="stuff_edit" id="stuff_edit"
+                                             value="#{userManager.currentstuffname}">
+                                <f:selectItem itemLabel="--选择用户--" />
+                                <f:selectItems value="#{userManager.allStuffName}" var="StuffName"
+                                               itemValue="#{StuffName}" itemLabel="#{StuffName}" />
+                            </h:selectOneMenu>
+                            <br />
+                            <h:inputText value="#{userManager.password}" /><br/>
+                            <h:inputText value="#{userManager.email}" />
+                            <br />
+                            <h:commandButton action="#{userManager.editStuff}" id="submit_edit"
+                                             value="Edit Stuff" />
+                        </h:form>
+                    </div>
+                </div>
+            </div>
 
-	<!-- Javascript -->
-	<script src="assets/js/jquery-1.11.1.min.js"></script>
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="assets/js/jquery.backstretch.min.js"></script>
-	<script src="assets/js/scripts.js"></script>
+        </div>
 
-	<!--[if lt IE 10]>
+        <!-- Javascript -->
+        <script src="assets/js/jquery-1.11.1.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets/js/jquery.backstretch.min.js"></script>
+        <script src="assets/js/scripts.js"></script>
+
+        <!--[if lt IE 10]>
             <script src="assets/js/placeholder.js"></script>
         <![endif]-->
 
-</h:body>
+    </h:body>
 </html>
 
 
