--- a/src/main/webapp/Item_remove.xhtml
+++ b/src/main/webapp/Item_remove.xhtml
@@ -57,13 +57,13 @@ limitations under the License.
             <div class="inner-bg">
                 <div class="container">
                     <h:messages />
-                    <p:dataTable var="i" value="#{itemManager.allItem}" rows="5">
+                    <p:dataTable var="i" value="#{itemManager.allItem}" rows="5" paginator="true">
                         <f:facet name="header">Item List</f:facet>
                         <p:column headerText="ItemName">#{i.name}</p:column>
                         <p:column headerText="Status">#{i.status}</p:column>
                         <p:column headerText="Code">#{i.code}</p:column>
                         <p:column headerText="NumTotal">#{i.numTotal}</p:column>
-                        <p:column headerText="Category">#{i.category}</p:column>>
+                        <p:column headerText="Category">#{i.category.name}</p:column>>
                     </p:dataTable>
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
@@ -71,7 +71,7 @@ limitations under the License.
                                 <strong>314Lab</strong> Management
                             </h1>
                             <div class="description">
-                                <p>Power of All of 314!</p>
+                                <p>Powered By 314!</p>
                             </div>
                         </div>
                     </div>
@@ -94,7 +94,8 @@ limitations under the License.
                                         <div class="form-group">
                                             <p:inputText
                                                 value="#{credentials.name}" placeholder="Itemname..."
-                                                styleClass="form-username form-control" id="form-username"/>
+                                                styleClass="form-username form-control" id="form-username"
+                                                validator="#{itemManager.validateRemoveName}"/>
                                         </div>
                                        
                                     </h:panelGrid>
