--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,124 +21,127 @@ limitations under the License.
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    <h:head>
-        <title>PrimeFaces and Boostrap test</title>
-        <!-- CSS -->
-        <link rel="stylesheet"
-              href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500" />
-        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-        <link rel="stylesheet"
-              href="assets/font-awesome/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="assets/css/form-elements.css" />
-        <link rel="stylesheet" href="assets/css/style.css" />
-        <script src="assets/"/>
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
+    <f:view>
+        <f:event type="preRenderView" listener="#{login.checkLogin}"/>
+        <h:head>
+            <title>PrimeFaces and Boostrap test</title>
+            <!-- CSS -->
+            <link rel="stylesheet"
+                  href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500" />
+            <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+            <link rel="stylesheet"
+                  href="assets/font-awesome/css/font-awesome.min.css" />
+            <link rel="stylesheet" href="assets/css/form-elements.css" />
+            <link rel="stylesheet" href="assets/css/style.css" />
+            <script src="assets/"/>
+            <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+            <!--[if lt IE 9]>
+                <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+                <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+            <![endif]-->
 
-        <!-- Favicon and touch icons -->
-        <link rel="shortcut icon" href="assets/ico/favicon.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144"
-              href="assets/ico/apple-touch-icon-144-precomposed.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114"
-              href="assets/ico/apple-touch-icon-114-precomposed.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72"
-              href="assets/ico/apple-touch-icon-72-precomposed.png" />
-        <link rel="apple-touch-icon-precomposed"
-              href="assets/ico/apple-touch-icon-57-precomposed.png" />
-    </h:head>
-    <h:body>
+            <!-- Favicon and touch icons -->
+            <link rel="shortcut icon" href="assets/ico/favicon.png" />
+            <link rel="apple-touch-icon-precomposed" sizes="144x144"
+                  href="assets/ico/apple-touch-icon-144-precomposed.png" />
+            <link rel="apple-touch-icon-precomposed" sizes="114x114"
+                  href="assets/ico/apple-touch-icon-114-precomposed.png" />
+            <link rel="apple-touch-icon-precomposed" sizes="72x72"
+                  href="assets/ico/apple-touch-icon-72-precomposed.png" />
+            <link rel="apple-touch-icon-precomposed"
+                  href="assets/ico/apple-touch-icon-57-precomposed.png" />
+        </h:head>
+        <h:body>
 
-        <!-- Top content -->
-        <div class="top-content">
+            <!-- Top content -->
+            <div class="top-content">
 
-            <div class="inner-bg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-8 col-sm-offset-2 text">
-                            <h1>
-                                <strong>314Lab</strong> Management
-                            </h1>
-                            <div class="description">
-                                <p>Power of All of 314!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3 form-box">
-                            <div class="form-top">
-                                <div class="form-top-left">
-                                    <h3>Login to our site</h3>
-                                    <p>Enter your username and password to log on:</p>
-                                </div>
-                                <div class="form-top-right">
-                                    <i class="fa fa-key"></i>
+                <div class="inner-bg">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-8 col-sm-offset-2 text">
+                                <h1>
+                                    <strong>314Lab</strong> Management
+                                </h1>
+                                <div class="description">
+                                    <p>Powered By  314!</p>
                                 </div>
                             </div>
-                            <div class="form-bottom">
-                                <h:form role="form" class="login-form"
-                                        id="loginForm">
-                                    <h:panelGrid columns="1" rendered="#{!login.loggedIn}">
-                                        <h:messages/>
-                                        <div class="form-group">
-                                            <p:inputText
-                                                value="#{credentials.username}" placeholder="Username..."
-                                                styleClass="form-username form-control" id="form-username" validatorMessage="">
-                                                <f:ajax event="blur" render="nameError"/>
-                                            </p:inputText>
-                                            <h:message id="nameError" for="form-username"/>
-                                        </div>
-                                        <div class="form-group">
-                                            <p:inputText
-                                                value="#{credentials.password}" placeholder="Password..."
-                                                styleClass="form-password form-control" id="form-password" type="password"/>
-                                        </div>
-                                    </h:panelGrid>
-                                    <h:commandButton id="login" value="Login"
-                                                     action="#{login.login}" rendered="#{!login.loggedIn}" 
-                                                     styleClass="button"/>
-                                    <h:commandButton id="logout" value="Logout"
-                                                     action="#{login.logout}" rendered="#{login.loggedIn}" 
-                                                     styleClass="button"/>
-                                </h:form>
-                                <p:link styleClass="btn btn-link-1" href="/users.jsf">
-                                    Sign in!
-                                </p:link>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6 col-sm-offset-3 form-box">
+                                <div class="form-top">
+                                    <div class="form-top-left">
+                                        <h3>Login to our site</h3>
+                                        <p>Enter your username and password to log on:</p>
+                                    </div>
+                                    <div class="form-top-right">
+                                        <i class="fa fa-key"></i>
+                                    </div>
+                                </div>
+                                <div class="form-bottom">
+                                    <h:form role="form" class="login-form"
+                                            id="loginForm">
+                                        <h:panelGrid columns="1" rendered="#{!login.loggedIn}">
+                                            <h:messages/>
+                                            <div class="form-group">
+                                                <p:inputText
+                                                    value="#{credentials.username}" placeholder="Username..."
+                                                    styleClass="form-username form-control" id="form-username" validatorMessage="">
+                                                    <f:ajax event="blur" render="nameError"/>
+                                                </p:inputText>
+                                                <h:message id="nameError" for="form-username"/>
+                                            </div>
+                                            <div class="form-group">
+                                                <p:inputText
+                                                    value="#{credentials.password}" placeholder="Password..."
+                                                    styleClass="form-password form-control" id="form-password" type="password"/>
+                                            </div>
+                                        </h:panelGrid>
+                                        <h:commandButton id="login" value="Login"
+                                                         action="#{login.login}" rendered="#{!login.loggedIn}" 
+                                                         styleClass="button"/>
+                                        <h:commandButton id="logout" value="Logout"
+                                                         action="#{login.logout}" rendered="#{login.loggedIn}" 
+                                                         styleClass="button"/>
+                                    </h:form>
+                                    <p:link styleClass="btn btn-link-1" href="/users.jsf">
+                                        Sign in!
+                                    </p:link>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3 social-login">
-                            <h3>...or login with:</h3>
-                            <div class="social-login-buttons">
-                                <h:link styleClass="btn btn-link-1 btn-link-1-facebook" > <i
-                                        class="fa fa-facebook"></i> Facebook
-                                </h:link> <a class="btn btn-link-1 btn-link-1-twitter" href="#"> <i
-                                        class="fa fa-twitter"></i> Twitter
-                                </a> <a class="btn btn-link-1 btn-link-1-google-plus" href="#"> <i
-                                        class="fa fa-google-plus"></i> Google Plus
-                                </a>
+                        <div class="row">
+                            <div class="col-sm-6 col-sm-offset-3 social-login">
+                                <h3>...or login with:</h3>
+                                <div class="social-login-buttons">
+                                    <h:link styleClass="btn btn-link-1 btn-link-1-facebook" > <i
+                                            class="fa fa-facebook"></i> Facebook
+                                    </h:link> <a class="btn btn-link-1 btn-link-1-twitter" href="#"> <i
+                                            class="fa fa-twitter"></i> Twitter
+                                    </a> <a class="btn btn-link-1 btn-link-1-google-plus" href="#"> <i
+                                            class="fa fa-google-plus"></i> Google Plus
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
 
-        </div>
+            <!-- Javascript -->
+            <script src="assets/js/jquery-1.11.1.min.js"></script>
+            <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+            <script src="assets/js/jquery.backstretch.min.js"></script>
+            <script src="assets/js/scripts.js"></script>
 
-        <!-- Javascript -->
-        <script src="assets/js/jquery-1.11.1.min.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/jquery.backstretch.min.js"></script>
-        <script src="assets/js/scripts.js"></script>
+            <!--[if lt IE 10]>
+                <script src="assets/js/placeholder.js"></script>
+            <![endif]-->
 
-        <!--[if lt IE 10]>
-            <script src="assets/js/placeholder.js"></script>
-        <![endif]-->
-
-    </h:body>
+        </h:body>
+    </f:view>
 </html>
 
