--- a/src/main/webapp/Item_query_filter_old.xhtml
+++ b/src/main/webapp/Item_query_filter_old.xhtml
@@ -43,13 +43,13 @@ limitations under the License.
                     <h:outputText value="#{item.name}" />
                 </p:column>
 
-                <p:column filterBy="#{item.category.name}" headerText="Category" footerText="exact" filterMatchMode="exact">
+                <p:column filterBy="#{item.category.id}" headerText="Category" footerText="exact" filterMatchMode="exact">
                     <f:facet name="filter">
                         <p:selectOneMenu label="Category" onchange="PF('itemsTable').filter()" styleClass="width:300px;" 
                                          converter="#{categoryConverterBean}">
                             <f:selectItem itemLabel="--Select One--"/>
                             <f:selectItems value="#{itemQueryManager.findAllCategorys()}" 
-                                           var="Category" itemValue="#{Category.name}" itemLabel="#{Category.name}"/>
+                                           var="Category" itemValue="#{Category.id}" itemLabel="#{Category.name}"/>
                         </p:selectOneMenu>
                     </f:facet>
                     <h:outputText value="#{item.category.name}" />
