--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -24,7 +24,7 @@ limitations under the License.
         <f:event type="preRenderView" listener="#{login.checkLogin}"/>
         <h:head>
             <meta charset="utf-8"/>
-            <meta name="viewport" content="width=device-width, initial-scale=1"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
             <title>314专属物品管理系统</title>
             <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
             <link href="assets/css/datepicker3.css" rel="stylesheet"/>
@@ -66,7 +66,7 @@ limitations under the License.
                 </form>
                 <ul class="nav menu">
                     <li class="active"><a href="home.jsf"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
-                    <li><p:link href="ReadyKnow.jsf"><span class="glyphicon glyphicon-th">Ready To Know</span> </p:link></li>
+                    <li><p:link href="ReadyKnow.jsf"><span class="glyphicon glyphicon-th">Ready&nbsp;To&nbsp;Know</span> </p:link></li>
                     <li><a href="charts.html"><span class="glyphicon glyphicon-stats"></span> Charts</a></li>
                     <li><a href="LendItem.jsf"><span class="glyphicon glyphicon-list-alt"></span> Tables</a></li>
                     <li><a href="forms.html"><span class="glyphicon glyphicon-pencil"></span> Forms</a></li>
