页面融合完成

--- a/src/main/webapp/Item_query_filter.xhtml
+++ b/src/main/webapp/Item_query_filter.xhtml
@@ -81,7 +81,7 @@ limitations under the License.
                     <li class="active"><a href="home.jsf"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
                     <li><p:link href="NeedKnow.jsf"><span class="glyphicon glyphicon-th">Ready&nbsp;To&nbsp;Know</span> </p:link></li>
                     <li><a href="charts.html"><span class="glyphicon glyphicon-stats"></span> Charts</a></li>
-                    <li><a href="LendItem.jsf"><span class="glyphicon glyphicon-list-alt"></span> Tables</a></li>
+                    <li><a href="LendItem.jsf"><span class="glyphicon glyphicon-list-alt"></span> LendItem</a></li>
                     <li><a href="forms.html"><span class="glyphicon glyphicon-pencil"></span> Forms</a></li>
                     <li><a href="panels.html"><span class="glyphicon glyphicon-info-sign"></span> Alerts &amp; Panels</a></li>
                     <li class="parent ">
