--- a/src/main/webapp/Item.xhtml
+++ b/src/main/webapp/Item.xhtml
@@ -70,9 +70,9 @@ limitations under the License.
                 </form>
                 <ul class="nav menu">
                     <li class="active"><a href="home.jsf"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
-                    <li><p:link href="NeedKnow.jsf"><span class="glyphicon glyphicon-th">Need&nbsp;Know</span> </p:link></li>
+                    <li><p:link href="ReadyKnow.jsf"><span class="glyphicon glyphicon-th">Ready&nbsp;To&nbsp;Know</span> </p:link></li>
                     <li><a href="charts.html"><span class="glyphicon glyphicon-stats"></span> Charts</a></li>
-                    <li><a href="LendItem.jsf"><span class="glyphicon glyphicon-list-alt"></span> Tables</a></li>
+                    <li><a href="LendItem.jsf"><span class="glyphicon glyphicon-list-alt"></span> LendItem</a></li>
                     <li><a href="forms.html"><span class="glyphicon glyphicon-pencil"></span> Forms</a></li>
                     <li><a href="panels.html"><span class="glyphicon glyphicon-info-sign"></span> Alerts &amp; Panels</a></li>
                     <li class="parent ">
@@ -128,105 +128,101 @@ limitations under the License.
                     <li role="presentation" class="divider"></li>
                     <li><a href="index.jsf"><span class="glyphicon glyphicon-user"></span> Login Page</a></li>
                 </ul>
-            </div><!--/.sidebar-->
+            </div><!--/.sidebar--> 
 
             <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">			
                 <div class="row">
-                    <ui:composition template="template/template.xhtml">
-                        <ui:define name="content">
-                            <h:messages />
-                            <div class="col-xs-12 col-md-12 col-lg-12">
-                                <h1>Items</h1>
-                                <p:dataTable id="dataTable" value="#{itemManager.allItem}" var="i" 
-                                             scrollRows="20" scrollable="true" scrollHeight="200" 
-                                             lazy="true" rows="40">
-                                    <p:column headerText="ItemName">#{i.name}</p:column>
-                                    <p:column headerText="Status">#{i.status}</p:column>
-                                    <p:column headerText="DateBought">#{i.dateBought}</p:column>
-                                    <p:column headerText="Code">#{i.code}</p:column>
-                                    <p:column headerText="NumTotal">#{i.numTotal}</p:column>
-                                    <p:column headerText="Category">#{i.category.name}</p:column>
-                                </p:dataTable>
-                                <p:blockUI block="dataTable" trigger="dataTable">
-                                    LOADING...<br />
-                                    <p:graphicImage value="/assets/img/loading/loading.gif" />
-                                </p:blockUI>
-                            </div>
-                            <div class="col-xs-12 col-md-12 col-lg-12" style="margin-top: 30px;">
-                                <p:dataTable value="#{categoryManager.allCategory}" var="c"
-                                             styleClass="table" lazy="true" rows="40"
-                                             scrollRows="20" scrollable="true" scrollHeight="130" >
-                                    <p:column headerText="分类ID">
-                                        #{c.id}
-                                    </p:column>
-                                    <p:column headerText="上级分类名称">
-                                        #{c.name}
-                                    </p:column>
-                                </p:dataTable>
-                            </div>
-                            <div class="col-xs-12 col-md-12 col-lg-12">
-                                <div style="text-align: center; margin: 0 auto; vertical-align: middle;">
-                                    <h1>Add Item</h1>
-                                    <h:form>
-                                        <table style="margin: 0 auto;">
-                                            <tr>
-                                                <td>物品名称</td>
-                                                <td><p:inputText value="#{itemaddmanager.newItem.name}" id="itemname" 
-                                                                 required="true" requiredMessage="您还没有给您的物品定名字呢！"
-                                                                 validator="#{itemaddmanager.ItemAddValidator}">
-                                                    </p:inputText>
-                                                    <h:message for="itemname"/>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>上级目录</td>
-                                                <td><p:selectOneMenu id="category_fk" value="#{itemaddmanager.newItem.category.id}" 
-                                                                     converter="#{categoryConverterBean}" title="category" required="true"
-                                                                     requiredMessage="请选择上级分类" >
-                                                        <f:selectItem itemLabel="--选择分类--" />
-                                                        <f:selectItems value="#{categoryManager.allCategory}" var="Category" itemValue="#{Category.id}" itemLabel="#{Category.name}"/>
-                                                    </p:selectOneMenu>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>物品状态</td>
-                                                <td><p:inputText value="#{itemaddmanager.newItem.status}" required="true" /></td>
-                                            </tr>
-                                            <tr>
-                                                <td>物品总量</td>
-                                                <td><p:inputText value="#{itemaddmanager.newItem.numTotal}" required="true" requiredMessage="您还没有说有多少个啊！"/></td>
-                                            </tr>
-                                            <tr>
-                                                <td>物品编码</td>
-                                                <td><p:inputText value="#{itemaddmanager.newItem.code}" required="true" requiredMessage="简单介绍一下物品来源吧！"/></td>
-                                            </tr>
-                                            <tr>
-                                                <td>物品购入日期(日/月/年)</td>
-                                                <td><p:calendar value="#{itemaddmanager.newItem.dateBought}" id="datebought">
-                                                    </p:calendar>
-                                                    <h:message for="datebought"/>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td></td>
-                                                <td><p:commandButton action="#{itemaddmanager.addItem}"
-                                                                     value="Add Item" /></td>
-                                            </tr>
-                                            <tr>
-                                                <td></td>
-                                                <td></td>
-                                            </tr>
-                                        </table>
-                                    </h:form>
-                                    <h:form style="margin: 0 auto;">
-                                        <p:inputText value="#{categoryManager.newcategory.name}" />
-                                        <p:commandButton action="#{categoryManager.addCategory}"
-                                                         value="Add Category" />
-                                    </h:form>
-                                </div>
-                            </div>
-                        </ui:define>
-                    </ui:composition>
+                    <h:messages />
+                    <div class="col-xs-12 col-md-12 col-lg-12" style="margin-bottom: 50px;">
+                        <h1>Items</h1>
+                        <p:dataTable id="dataTable" value="#{itemManager.allItem}" var="i" 
+                                     scrollRows="20" scrollable="true" scrollHeight="200" 
+                                     lazy="true" rows="40">
+                            <p:column headerText="ItemName">#{i.name}</p:column>
+                            <p:column headerText="Status">#{i.status}</p:column>
+                            <p:column headerText="DateBought">#{i.dateBought}</p:column>
+                            <p:column headerText="Code">#{i.code}</p:column>
+                            <p:column headerText="NumTotal">#{i.numTotal}</p:column>
+                            <p:column headerText="Category">#{i.category.name}</p:column>
+                        </p:dataTable>
+                        <p:blockUI block="dataTable" trigger="dataTable">
+                            LOADING...<br />
+                            <p:graphicImage value="/assets/img/loading/loading.gif" />
+                        </p:blockUI>
+                    </div>
+                    <div class="col-xs-12 col-md-12 col-lg-12" style="margin-top: 30px;">
+                        <p:dataTable value="#{categoryManager.allCategory}" var="c"
+                                     styleClass="table" lazy="true" rows="40"
+                                     scrollRows="20" scrollable="true" scrollHeight="130" >
+                            <p:column headerText="分类ID">
+                                #{c.id}
+                            </p:column>
+                            <p:column headerText="上级分类名称">
+                                #{c.name}
+                            </p:column>
+                        </p:dataTable>
+                    </div>
+                    <div class="col-xs-12 col-md-12 col-lg-12">
+                        <div style="text-align: center; margin: 0 auto; vertical-align: middle;">
+                            <h1>Add Item</h1>
+                            <h:form>
+                                <table style="margin: 0 auto;">
+                                    <tr>
+                                        <td>物品名称</td>
+                                        <td><p:inputText value="#{itemaddmanager.newItem.name}" id="itemname" 
+                                                         required="true" requiredMessage="您还没有给您的物品定名字呢！"
+                                                         validator="#{itemaddmanager.ItemAddValidator}">
+                                            </p:inputText>
+                                            <h:message for="itemname"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>上级目录</td>
+                                        <td><p:selectOneMenu id="category_fk" value="#{itemaddmanager.newItem.category.id}" 
+                                                             converter="#{categoryConverterBean}" title="category" required="true"
+                                                             requiredMessage="请选择上级分类" >
+                                                <f:selectItem itemLabel="--选择分类--" />
+                                                <f:selectItems value="#{categoryManager.allCategory}" var="Category" itemValue="#{Category.id}" itemLabel="#{Category.name}"/>
+                                            </p:selectOneMenu>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>物品状态</td>
+                                        <td><p:inputText value="#{itemaddmanager.newItem.status}" required="true" /></td>
+                                    </tr>
+                                    <tr>
+                                        <td>物品总量</td>
+                                        <td><p:inputText value="#{itemaddmanager.newItem.numTotal}" required="true" requiredMessage="您还没有说有多少个啊！"/></td>
+                                    </tr>
+                                    <tr>
+                                        <td>物品编码</td>
+                                        <td><p:inputText value="#{itemaddmanager.newItem.code}" required="true" requiredMessage="简单介绍一下物品来源吧！"/></td>
+                                    </tr>
+                                    <tr>
+                                        <td>物品购入日期(日/月/年)</td>
+                                        <td><p:calendar value="#{itemaddmanager.newItem.dateBought}" id="datebought">
+                                            </p:calendar>
+                                            <h:message for="datebought"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td><p:commandButton action="#{itemaddmanager.addItem}"
+                                                             value="Add Item" /></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </table>
+                            </h:form>
+                            <h:form style="margin: 0 auto;">
+                                <p:inputText value="#{categoryManager.newcategory.name}" />
+                                <p:commandButton action="#{categoryManager.addCategory}"
+                                                 value="Add Category" />
+                            </h:form>
+                        </div>
+                    </div>
                 </div><!--/.row-->
             </div>	<!--/.main-->
             <script src="assets/js/jquery-1.11.1.min.js"></script>
