--- a/src/main/webapp/users.xhtml
+++ b/src/main/webapp/users.xhtml
@@ -22,6 +22,7 @@ limitations under the License.
       xmlns:p="http://primefaces.org/ui"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
+        <f:event type="preRenderView" listener="#{login.checkLogin}"/>
         <title>PrimeFaces and Boostrap test</title>
         <!-- CSS -->
         <link rel="stylesheet"
