--- a/src/main/webapp/Item_query_filter.xhtml
+++ b/src/main/webapp/Item_query_filter.xhtml
@@ -23,6 +23,7 @@ limitations under the License.
       xmlns:p="http://primefaces.org/ui"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
     <h:head>
+        <f:event type="preRenderView" listener="#{login.checkLogin}"/>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
         <title>Item_query_filter</title>
@@ -64,7 +65,7 @@ limitations under the License.
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
                                     <li><a href="Stuff_modify.jsf"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-                                    <li><p:link><span class="glyphicon glyphicon-log-out"></span> Logout</p:link></li>
+                                    <li style="padding-left: 20px;"><h:form><p:commandButton action="#{login.logout}" value="LogOut" styleClass="logout"><span class="glyphicon glyphicon-log-out"></span> </p:commandButton></h:form></li>
                                 </ul>
                             </li>
                         </ul>
