--- a/src/main/webapp/Stuff_remove.xhtml
+++ b/src/main/webapp/Stuff_remove.xhtml
@@ -22,6 +22,7 @@ limitations under the License.
       xmlns:p="http://primefaces.org/ui"
       xmlns:fn="http://java.sun.com/jsp/jstl/functions">
     <f:view>
+        <f:event type="preRenderView" listener="#{login.checkLogin}"/>
         <h:head>
             <meta charset="utf-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
@@ -157,7 +158,7 @@ limitations under the License.
                                 <div class="form-bottom">
                                     <h:form role="form" class="login-form"
                                             id="loginForm">
-                                        <h:panelGrid columns="1" rendered="#{!login.loggedIn}">
+                                        <h:panelGrid columns="1">
                                             <h:messages/>
                                             <div class="form-group">
                                                 <p:inputText
